# jpegfs

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/jpegfs/: __main__.py  cli.py  commands.py  container.py  crypto.py  errors.py  jpeg.py  key_material.py  payload.py  shard_metadata.py
tests/smoke/: test_del.py  test_get.py  test_init.py  test_list.py  test_passwd.py  test_put.py  test_read.py  test_repair.py  test_wipe.py  test_write.py
tests/unit/: test_commands.py  test_container.py  test_crypto.py  test_jpeg.py  test_key_material.py  test_payload.py  test_shard_metadata.py
