[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "jpegfs"
version = "0.1.4"
description = "Covert encrypted virtual filesystem distributed across JPEG files"
keywords = ["jpeg", "encryption", "filesystem", "steganography", "cli"]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
authors = [{ name = "Artem Abramov" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography >=49.0"
]

[project.urls]
Homepage = "https://github.com/artabramov/jpegfs"
Repository = "https://github.com/artabramov/jpegfs"

[project.scripts]
jpegfs = "jpegfs.cli:main"
