[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "jpegfs"
version = "0.1.19"
description = "Encrypted file container distributed across JPEG files"
keywords = ["jpeg", "encryption", "security", "erasure-coding", "cli"]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
authors = [{ name = "Artem Abramov" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography >=49.0",
    "zfec >=1.6"
]

[project.urls]
Homepage = "https://github.com/artabramov/jpegfs"
Repository = "https://github.com/artabramov/jpegfs"

[project.scripts]
jpegfs = "jpegfs.cli:main"
